cmake_minimum_required(VERSION 3.23)
project(DataStructure)

set(CMAKE_CXX_STANDARD 17)

add_executable(DataStructure main.cpp)
add_executable(Two-wayLinkedList.cpp Two-wayLinkedList.cpp)
add_executable(arrayStack.cpp arrayStack.cpp)
add_executable(listStack.cpp listStack.cpp)
add_executable(tree.cpp tree.cpp)
add_executable(treeMaxDistance.cpp treeMaxDistance.cpp)
add_executable(que2stack.cpp que2stack.cpp)