cmake_minimum_required(VERSION 3.23)
project(code)

set(CMAKE_CXX_STANDARD 17)

add_executable(house housePrice.cpp)
add_executable(funcFor funcFor.cpp)
add_executable(cookies cookies.cpp)
add_executable(twoDArray twoDArray.cpp)
add_executable(CstySting CstySting.cpp)
add_executable(funcStruct funcStruct.cpp)
add_executable(funcString funcString.cpp)
add_executable(funcArray funcArray.cpp)
add_executable(funcRecursion funcRecursion.cpp)
add_executable(funcNeedle funcNeedle.cpp)
add_executable(funcCite funcCite.cpp)
add_executable(citeStruct citeStruct.cpp)