cmake_minimum_required(VERSION 3.23)
project(template)

set(CMAKE_CXX_STANDARD 17)

add_executable(template main.cpp)
add_executable(01arraySort.cpp 01arraySort.cpp)
add_executable(02classTemplate.cpp 02classTemplate.cpp)
add_executable(03Sub-file.cpp 03Sub-file.cpp)
add_executable(person.cpp person.cpp)
add_executable(04Friend.cpp 04Friend.cpp)
add_executable(05vector.cpp 05vector.cpp)
add_executable(06stringContainer.cpp 06stringContainer.cpp)
add_executable(07vectorContainer.cpp 07vectorContainer.cpp)
add_executable(08dequeContainer.cpp 08dequeContainer.cpp)
add_executable(09listContainer.cpp 09listContainer.cpp)
add_executable(10setContainer.cpp 10setContainer.cpp)
add_executable(11mapContainer.cpp 11mapContainer.cpp)
add_executable(12predicate.cpp 12predicate.cpp)
add_executable(13imitationFunction.cpp 13imitationFunction.cpp)
add_executable(14searchAlgorithm.cpp 14searchAlgorithm.cpp)
add_executable(15sortAlgorithm.cpp 15sortAlgorithm.cpp)
add_executable(16setAlgorithm.cpp 16setAlgorithm.cpp)